--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,8 @@ spring.profiles.active=test
 
 #JdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+#MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+loggin.leverl.hello.itemservice.repository.mybatis=trace
